<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/appNameView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="100dp"
        android:text="@string/app_name_label"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/appName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text=""
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        app:layout_constraintLeft_toRightOf="@id/appNameView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/appNameView"
        app:layout_constraintBottom_toBottomOf="@id/appNameView"/>

    <TextView
        android:id="@+id/passwordLengthView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/password_length_label"
        android:textSize="20sp"

        app:layout_constraintLeft_toLeftOf="@id/appNameView"
        app:layout_constraintTop_toBottomOf="@id/appNameView"/>

    <EditText
        android:id="@+id/passwordLength"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text=""
        android:inputType="number"
        android:maxLength="2"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/passwordLengthView"
        app:layout_constraintTop_toTopOf="@id/passwordLengthView"
        app:layout_constraintBottom_toBottomOf="@id/passwordLengthView">

    </EditText>

    <Button
        android:id="@+id/generatePassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_secondary"
        android:text="@string/will_not_forget_next_time"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordLengthView"
        />

    <Button
        android:id="@+id/copyAndStorePassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_secondary"
        android:text="@string/choose_you"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/generatePassword"
        />

    <TextView
        android:id="@+id/currentPassword"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/copyAndStorePassword"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>